<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.henmory.views.LoginActivity"
    tools:showIn="@layout/activity_login">
    <!--incon view-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0pt"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0pt"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0pt"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0pt"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="0pt"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:layout_width="0pt"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0pt"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0pt"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">
            <!-- input accont name endit view-->

            <EditText
                android:id="@+id/edit_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- input password edit-->

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <!-- save password radioButton view-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioBtn_savePassword"
                    android:layout_width="0pt"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/savePassword"
                    android:checked="false"/>

                <TextView
                    android:layout_width="0pt"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/forgetPassword"
                    android:id="@+id/txt_forgetPassword"/>
            </LinearLayout>

            <!-- login and register button view-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_Login"
                    android:layout_width="0pt"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/login" />

                <Button
                    android:id="@+id/btn_Regster"
                    android:layout_width="0pt"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/register" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="0pt"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0pt"
        android:layout_weight="1"></LinearLayout>


</LinearLayout>
